--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/css/swiper.min.css">
-    <link rel="stylesheet" href="css/calendar.css">
-    <script src="js/jquery-1.7.2.min.js"></script>
-    <script src="js/rem.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.2/js/swiper.min.js"></script>
-</head>
-<body>
-    <div class="header">
-        <span class="arrow-left"></span>
-        <div>
-            <p class="date-txt">2017年01月23号</p>
-        </div>
-        <span class="arrow-right"></span>
-    </div>
-    <ul class="calendar-header">
-        <li>日</li>
-        <li>一</li>
-        <li>二</li>
-        <li>三</li>
-        <li>四</li>
-        <li>五</li>
-        <li>六</li>
-    </ul>
-    <!-- 日历 -->
-    <div class="swiper-container" id="calendar">
-        <div class="swiper-wrapper" id="calendarHtml">
-        </div>
-    </div>
-    <!-- 弹出层 -->
-    <div class="dateModal">
-        <div class="conetent">
-            <p class="action">
-                <a href="###" class="cancel">取消</a>
-                <a href="###" class="enter">确定</a>
-            </p>
-            <div class="dateScroll">
-                <div class="swiper-container" id="selectYear">
-                    <div class="swiper-wrapper" id="selectYearHtml">
-                    </div>
-                </div>
-                <div class="swiper-container" id="selectMon">
-                    <div class="swiper-wrapper" id="selectMonHtml">
-                    </div>
-                </div>
-                <div class="swiper-container" id="selectDay">
-                    <div class="swiper-wrapper" id="selectDayHtml">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- loading -->
-    <div class="fixLoading">
-        <div>
-            <img src="./images/loading.gif">
-            <span>正在加载...</span>
-        </div>
-    </div>
-</body>
-<script src="js/calendar.js"></script>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+		<title>日历</title>
+		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">  
+		<link rel="stylesheet" href="./static/css/index.css">
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
+		<script src="./static/js/rem.js" type="text/javascript" charset="utf-8"></script>
+		<script src="./static/js/calendar.js" type="text/javascript" charset="utf-8"></script>
+	</head>
+	<body>
+		<div class="app">
+			<ul class="week-head"></ul>
+			<div class="swiper-container_wrapper">
+				<div class="swiper-container">
+					<div class="swiper-wrapper week-body"></div>
+				</div>
+			</div>
+		</div>
+	</body>
+	<script src="./static/js/index.js" type="text/javascript" charset="utf-8"></script>
 </html>
